@@ -21,5 +21,53 @@ Other functions:
 * The inventory data can be exported in a brief text report format, showing the containers' batch assignments and current stock on hand for consumable things like yeast and additives
 * All of the data can be manually backed up and restored, or it can be moved to a different network location
 
+## Getting Started
 
+### Dependencies
+This application was built with the following libraries
+* OpenJDK 21.0.2
+* Apache Derby 10.16.1.1
+* Gluon JavaFX JMods 21.0.2
+* Gluon JavaFX SDK 21.0.2
 
+The Derby libraries required:
+* derbyclient.jar
+* derbyshared.jar
+* derbytools.jar
+
+### Installing
+The application was exported from Eclipse as a jar file, extracting the required libraries into the jar.
+A Windows install file was created with this jpackage file, included in this repository:
+
+'''
+#! /bin/bash
+jpackage --type msi \
+	--name WinemakerRecordKeeper \
+	--description "Record Keeper for Wine and Mead Makers" \
+	--vendor "Spring Hill Tools" \
+	--app-version 3.2.0 \
+	--input input \
+	--dest output \
+	--icon input/Folder-wine-icon.ico \
+	--main-jar WineMaker-V3.2.0.jar \
+	--main-class geo.apps.winemaker.WineMakerMain \
+	--module-path c:/MiscSoftware/javafx-jmods-21.0.2 \
+	--add-modules javafx.controls,javafx.fxml,java.sql,java.management,java.naming \
+	--arguments -D \
+	--win-dir-chooser \
+	--win-shortcut \
+	--win-menu \
+	--verbose
+'''
+
+The output file will install the application as a standard Windows program.
+
+### Executing the program
+The installation will add an icon to the Windows desktop:
+![Folder-wine-icon](https://github.com/user-attachments/assets/80acdf5b-3cd5-470f-aec0-8d4b61f56fe8)
+
+## Help
+A Users Guide is being developed.  Otherwise, the application is provided as-is.   
+
+## Author
+George Owen (geofromkc@gmail.com)
